# cs184-final

./: .gitignore  CMakeLists.txt  README.md  README.me  build.sh  index.html  install.sh  ply2xyz.sh  pushwriteup.sh  writeup.html
dae/: my_mesh.dae
shader/: frag.glsl  vert
src/: BPA.cpp  BPA.h  CMakeLists.txt  MyRenderer.cpp  MyRenderer.h  Parser.cpp  Parser.h  VoxelTest.cpp  XYZRenderer.cpp  XYZRenderer.h  main.cpp  meshEdit.cpp  meshEdit.h  ply2xyz.c  student_code.cpp  voxel.cpp  voxel.h  xyzview.cpp
src/targets/: BPATest.cpp  VoxelTest.cpp  debug2.cpp  debugview.cpp  fileiotest.cpp  main.cpp  meshedit.cpp  ply2txt.cpp  ply_faces.cpp  ply_lines.cpp  threads.cpp  view.cpp  xyzview.cpp
